--- a/week5/index.html
+++ b/week5/index.html
@@ -1,1 +1,72 @@
 ECHO is on.
+
+html, body {
+	margin: 50px;
+	margin-left: 100px;
+	margin-right:100px;
+	font-size: 150%;
+
+}
+
+
+h1 {
+	font-family: 'Josefin Sans', sans-serif;
+	text-decoration: underline;
+	font-weight: 200;
+	text-transform:uppercase;
+	font-size: 1em;
+	width: 100%;
+	border-radius: 0.5em;
+	cursor: auto;
+	transition: 0.5s all ease-in-out;
+	letter-spacing: 20px;
+	text-align: left;
+
+
+}
+
+
+ p {
+ 	text-align: right;
+ }
+
+
+#one {
+	border: 5px solid orange;
+ 	padding: 30px;
+ 	font-family: 'Raleway', sans-serif;
+
+}
+ #two {
+ 	border: 5px solid purple;
+ 	padding: 30px;
+  	writing-mode: vertical-rl;
+  	word-wrap: break-word;
+  	font-family: 'Peddana', serif;
+
+}
+
+#three {
+	border: 5px solid blue;
+ 	padding: 30px;
+	text-align: left;
+	writing-mode: horizontal-tb; 
+	font-family: 'Dancing Script', cursive;
+
+}
+
+#four {
+	border: 5px solid red;
+ 	padding: 30px;
+  writing-mode: vertical-rl;
+}
+
+
+#grad {
+  background-image: linear-gradient(purple, orange);
+}
+
+
+.aligner{
+	width:80%;
+}
