--- a/week3/page4.html
+++ b/week3/page4.html
@@ -1,1 +1,16 @@
-ECHO is on.
+<!DOCTYPE html>
+<html>
+<head>
+	<title>All Ahout Runzhe Sha & His Music </title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+
+<a href="page5.html">
+
+<img src="images/4.png">
+
+</a>
+
+</body>
+</html>
