--- a/functions/index.html
+++ b/functions/index.html
@@ -1,39 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+<title>My Feelings</title>
 </head>
+
+
+
 <style type="text/css">
 	body, html {
 		font-family: Helevetica Neue, sans-serif;
+		color: purple;
 	}
 	.option {
 		display:inline-block;
 		margin: 2%;
 		padding:1% 2%;
-		border: 0.05em solid black;
+		border: 0.05em solid purple;
+		color: purple;
 	}
 </style>
-<body>
 
+
+
+<body>
+<center>
+<h1>Today I feel... </h1>
 <div class='option' id='happy'>Happy</div>
 <div class='option' id='neutral'>Neutral</div>
 <div class='option' id='sad'>Sad</div>
-	
-
-
-<b>
-<p id="demo" onclick="myFunction()">Click on me to see the words change!</p>
-</b>
-
-<script>
-
-function myFunction() {
-  document.getElementById("demo").innerHTML = "Happy, Neutral, and Sad!";
-}
-</script>
-
-
+<div class='option' id='mad'>Mad</div>
+</center>
 </body>
+
+
+
 <script type="text/javascript" src='main.js'></script>
 </html>
