--- a/week3/page7.html
+++ b/week3/page7.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>All Ahout Runzhe Sha & His Music </title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-
-<a href="page8.html">
-
-<img src="images/7.png">
-
-</a>
-
-</body>
-</html>
+ECHO is on.
