--- a/week3/page9.html
+++ b/week3/page9.html
@@ -1,1 +1,16 @@
-ECHO is on.
+ECHO is<!DOCTYPE html>
+<html>
+<head>
+	<title>All Ahout Runzhe Sha & His Music </title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+
+<a href="page10.html">
+
+<img src="images/9.png">
+
+</a>
+
+</body>
+</html> on.
