--- a/week3/page6.html
+++ b/week3/page6.html
@@ -1,4 +1,4 @@
-ECHO <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>All Ahout Runzhe Sha & His Music </title>
@@ -13,4 +13,4 @@ ECHO <!DOCTYPE html>
 </a>
 
 </body>
-</html>is on.
+</html>
