--- a/week3/page9.html
+++ b/week3/page9.html
@@ -1,4 +1,4 @@
-ECHO is<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>All Ahout Runzhe Sha & His Music </title>
@@ -13,4 +13,4 @@ ECHO is<!DOCTYPE html>
 </a>
 
 </body>
-</html> on.
+</html>
