--- a/week3/page10.html
+++ b/week3/page10.html
@@ -1,4 +1,4 @@
-ECHO is <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>All Ahout Runzhe Sha & His Music </title>
@@ -11,4 +11,4 @@ ECHO is <!DOCTYPE html>
 <img src="images/10.png">
 
 </body>
-</html>on.
+</html>
