--- a/week7/index.html
+++ b/week7/index.html
@@ -1,1 +1,410 @@
-ECHO is on.
+<!DOCTYPE html>
+<html>
+<head>
+	<title>SVG</title>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap" rel="stylesheet">
+</head>
+<h1>SVG Examples</h1>
+<style type="text/css">
+
+	html, body {
+		font-family: 'Open Sans Condensed';
+		width:100%;
+		overflow-x:none;
+		background-color: #FEEBD7
+		background-size: cover;
+		background-attachment: fixed;
+	}
+
+	h1 {
+		text-align: center;
+		font-family: 'Open Sans Condensed'
+		font-size: 70em;
+		color: purple;
+	}
+	.section{
+		width:100%;
+		height:200vh;
+		overflow-y:visible;
+		position:relative;
+		padding:5% 0%;
+	}
+	svg {
+		width:100%;
+		height:50%;
+		z-index:0;
+		padding:5% 0%;
+		overflow:visible;
+	}
+	.section h1 {
+		position:sticky;
+		font-size:10em;
+		z-index:100;
+		color:#ff68ce;
+	}
+	.right{
+		top:0;
+		float:right;
+		transform: rotate(360deg);
+    	transform-origin: 50% 100%;
+	}
+	.left {
+		top:0;
+		float:left;
+		transform: rotate(-90deg);
+    	transform-origin: 50% 100%;
+	}
+	.icecream {
+		
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+	}
+	.icecream:hover {
+		fill:white;
+		stroke:pink;
+		stroke-width:2em;
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+}
+		
+
+	.cherry {
+		
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+	}
+	.cherry:hover {
+		fill:white;
+		stroke:#ff0000;
+		stroke-width:1em;
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+}
+
+	.cone {
+		
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+	}
+
+	.cone:hover {
+		color:#764826;
+		stroke: #764826;
+		stroke-width:5em;
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+}
+
+
+	.sun {
+		
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+	}
+
+	.sun:hover {
+		fill:orange;
+		stroke:yellow;
+		stroke-width:;
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+	}
+
+	.stem {
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+	}
+
+		.stem:hover {
+		fill:brown;
+		stroke:green;
+		stroke-width: 10px;
+		cursor:pointer;
+		transition:all 0.5s ease-in-out;
+	}
+
+
+	
+	.flowers{
+		background: rgb(255,255,255,1);
+		
+	}
+	.flowers h1 {
+		color:yellow;
+	}
+
+	.flowers h1:hover {
+		color:green;
+		stroke-color:green;
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+
+	}
+
+	.butterflies h1 {
+		color:purple;
+	}
+
+	.butterflies h1:hover {
+		color:brown;
+		stroke-color:purple;
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+		font-size: 15em;
+
+	}
+
+	.wings {
+	cursor:pointer;
+	transition:all 0.15s ease-in-out;
+
+	}
+
+	.wings:hover {
+		fill:pink;
+		stroke:purple;
+		stroke-width:3px;
+		cursor:pointer;
+	}
+
+	.insect {
+	cursor:pointer;
+	transition:all 0.15s ease-in-out;
+
+	}
+
+	.insect:hover {
+		fill:black;
+		stroke:black;
+		stroke-width:3px;
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+	}
+
+
+
+	.sunset h1 {
+		color:orange;
+	}
+
+	.insect {
+	cursor:pointer;
+	transition:all 0.15s ease-in-out;
+
+	}
+
+	.insect:hover {
+		fill:black;
+		stroke:black;
+		stroke-width:3px;
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+	}
+
+	.sunset h1 {
+		color:orange;
+	}
+
+	.sunsetting {
+	cursor:pointer;
+	transition:all 0.5s ease-in-out;
+
+
+	}
+	
+		.sunsetting:hover {
+		fill:blue;
+		stroke:blue;
+		stroke-width:3px;
+		cursor:pointer;
+		transition:all 0.15s ease-in-out;
+
+	}
+
+		.thesun {
+	cursor:pointer;
+	transition:all 0.5s ease-in-out;
+
+	}
+	
+		.thesun:hover {
+		fill:#FB4D3D;
+		stroke:#FB4D3D;
+		stroke-width:3em;
+		cursor:pointer;
+		transition:all 0.3s ease-in-out;
+	}
+
+
+		.water {
+	cursor:pointer;
+	transition:all 0.5s ease-in-out;
+
+	}
+	
+		.water:hover {
+		fill:#3943c3;
+		stroke:#3943c3;
+		stroke-width:3em;
+		cursor:pointer;
+		transition:all 0.3s ease-in-out;
+	}
+
+
+
+
+
+</style>
+<body>
+
+<!-- section -->
+<div class='section'>
+	<h1 class='left'>Icecream!</h1>
+	<svg width="469" height="329" viewBox="0 0 469 329" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g clip-path="url(#clip0)">
+<rect width="469" height="329" fill="#F5F7BC"/>
+<ellipse cx="218" cy="72.5" rx="48" ry="41.5" fill="#BB8A66"/>
+<path d="M226.671 46.2635L213.411 49.8432L211 49.4522L224.1 44.955L226.671 46.2635Z" fill="#FF922E" stroke="#FF9900"/>
+<path d="M246.213 61.6954L239.815 69.6931L238.196 70.3813L244.096 61.7742L246.213 61.6954Z" fill="#F31673" stroke="#FF00B8"/>
+<path d="M205.655 121.258L191.221 122.725L189 121.71L203.631 119.078L205.655 121.258Z" fill="#DB00FF" stroke="#DB00FF"/>
+<path d="M247.655 141.258L233.221 142.725L231 141.71L245.631 139.078L247.655 141.258Z" fill="#001AFF" stroke="#000AFF"/>
+<ellipse cx="218" cy="134" rx="48" ry="40" fill="white"/>
+<path d="M231.803 113.754L223.168 119.262L221.413 119.391L229.773 113.146L231.803 113.754Z" fill="#1BC2CD" stroke="#1BC2CD"/>
+<ellipse class ='icecream' cx="218" cy="195.5" rx="48" ry="43.5" fill="#F2BDBD"/>
+<path d="M237.303 172.315L225.542 171.093L224.078 169.864L236.319 170.143L237.303 172.315Z" fill="#3A0F03" stroke="#3A0F03"/>
+<path class ='cone' d="M159.215 214.392L281.864 216.101L213.942 324.168L159.215 214.392Z" fill="#764826"/>
+<path d="M232 11.75L220.286 23H218L229.429 10L232 11.75Z" fill="#3A0F03" stroke="#3A0F03"/>
+<path d="M204.334 178.305L191.367 180.16L190.544 179.142L204.769 176.06L204.334 178.305Z" fill="#FFF500" stroke="#FFF500"/>
+<path d="M215.745 202.636L202.253 207.968L199.84 207.594L213.205 201.087L215.745 202.636Z" fill="#FF00B8" stroke="#FF004rcd554B8"/>
+<path d="M192.255 118.05L197.59 123.918L197.528 125L191.307 119.218L192.255 118.05Z" fill="#001AFF" stroke="#000AFF"/>
+<path d="M222.611 72.5934L208.269 74.7796L206 73.8762L220.481 70.5169L222.611 72.5934Z" fill="white" stroke="white"/>
+<path d="M241.849 137.379L234.988 138.998L234 138.546L241.018 136.258L241.849 137.379Z" fill="#DB00FF" stroke="#DB00FF"/>
+<path d="M242.69 199.505L234.606 193.824L234 192.323L242.782 197.504L242.69 199.505Z" fill="#FF0000" stroke="#FF0000"/>
+<path d="M196.116 145.298L205.646 138.899L207.359 139.074L197.928 146.631L196.116 145.298Z" fill="#FF9900" stroke="#FF9900"/>
+<path d="M194.61 66.3844L187.576 74.5769L185.885 75.6934L192.454 67.256L194.61 66.3844Z" fill="#FFF500" stroke="#FFF500"/>
+<ellipse class ='cherry' cx="218" cy="26" rx="11" ry="10" fill="#F33F3F"/>
+</g>
+<defs>
+<clipPath id="clip0">
+<rect width="469" height="329" fill="white"/>
+</clipPath>
+</defs>
+</svg>
+</path>
+</div>
+
+<!-- section -->
+<div class='section flowers'>
+	<h1 class='right'>Flowers!</h1>
+	<svg width="469" height="325" viewBox="0 0 469 325" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g clip-path="url(#clip0)">
+<rect width="469" height="325" fill="#94C7F7"/>
+<rect class= 'stem' x="227" y="222" width="15" height="103" fill="#06C65C"/>
+<ellipse cx="232.5" cy="222" rx="29.5" ry="26" fill="#FFF500"/>
+<ellipse cx="232.5" cy="222" rx="29.5" ry="26" fill="#FFF500"/>
+<ellipse cx="233.5" cy="155" rx="30.5" ry="30" fill="#FFF500"/>
+<ellipse cx="195.402" cy="189.179" rx="29.5" ry="26" transform="rotate(-4.38506 195.402 189.179)" fill="#FFF500"/>
+<ellipse cx="271.5" cy="189" rx="29.5" ry="26" fill="#FFF500"/>
+<ellipse class='sun'
+cx="233" cy="184.5" rx="22" ry="18.5" fill="#3A0F03"/>
+<path class='stem' d="M206.075 284.181C211.099 285.113 223.718 284.476 234.001 274.473L232.329 271.69L206.095 264.015L191.01 274.43L206.075 284.181Z" fill="#06C65C"/>
+<path class='stem' d="M262.946 275.346C257.922 274.412 245.303 275.042 235.015 285.04L236.686 287.824L262.916 295.512L278.006 285.103L262.946 275.346Z" fill="#06C65C"/>
+<rect x="350" y="259" width="10" height="66" fill="#069D4A"/>
+<ellipse cx="353.5" cy="258.5" rx="19.5" ry="16.5" fill="#FFF500"/>
+<ellipse cx="353.5" cy="258.5" rx="19.5" ry="16.5" fill="#FFF500"/>
+<ellipse cx="353.5" cy="258.5" rx="19.5" ry="16.5" fill="#FFF500"/>
+<ellipse cx="354" cy="215.5" rx="20" ry="19.5" fill="#FFF500"/>
+<ellipse rx="19.1634" ry="16.7707" transform="matrix(0.997114 -0.0759168 0.0770053 0.997031 329.4 237.396)" fill="#FFF500"/>
+<ellipse cx="379" cy="237.5" rx="19" ry="16.5" fill="#FFF500"/>
+<ellipse cx="354" cy="234" rx="14" ry="12" fill="#3A0F03"/>
+<path d="M336.333 298.671C339.597 299.273 347.795 298.862 354.475 292.41L353.389 290.615L336.347 285.665L326.547 292.383L336.333 298.671Z" fill="#069D4A"/>
+<path d="M373.279 292.973C370.015 292.37 361.817 292.777 355.134 299.226L356.22 301.021L373.259 305.98L383.063 299.267L373.279 292.973Z" fill="#069D4A"/>
+<rect x="122" y="259" width="10" height="66" fill="#069D4A"/>
+<ellipse cx="125.5" cy="258.5" rx="19.5" ry="16.5" fill="#FFF500"/>
+<ellipse cx="125.5" cy="258.5" rx="19.5" ry="16.5" fill="#FFF500"/>
+<ellipse cx="125.5" cy="258.5" rx="19.5" ry="16.5" fill="#FFF500"/>
+<ellipse cx="126" cy="215.5" rx="20" ry="19.5" fill="#FFF500"/>
+<ellipse rx="19.1634" ry="16.7707" transform="matrix(0.997114 -0.0759168 0.0770053 0.997031 101.4 237.396)" fill="#FFF500"/>
+<ellipse cx="151" cy="237.5" rx="19" ry="16.5" fill="#FFF500"/>
+<ellipse cx="126" cy="234" rx="14" ry="12" fill="#3A0F03"/>
+<path d="M108.333 298.671C111.597 299.273 119.795 298.862 126.475 292.41L125.389 290.615L108.347 285.665L98.5467 292.383L108.333 298.671Z" fill="#069D4A"/>
+<path d="M145.279 292.973C142.015 292.37 133.817 292.777 127.134 299.226L128.22 301.021L145.259 305.98L155.063 299.267L145.279 292.973Z" fill="#069D4A"/>
+<path d="M65.8936 108.196L42.6488 68.6176L88.5469 68.2761L65.8936 108.196Z" fill="#F3CE95"/>
+<path d="M60.7386 85.8221L92.0541 52.2649L105.458 96.1635L60.7386 85.8221Z" fill="#F3CE95"/>
+<path d="M38.292 51.3134L66.0316 87.882L20.4925 93.6209L38.292 51.3134Z" fill="#F3CE95"/>
+<path d="M124.697 59.9237L84.3412 81.7899L85.5825 35.9074L124.697 59.9237Z" fill="#F3CE95"/>
+<path d="M110.782 25.7405L92.3019 67.7553L65.156 30.7439L110.782 25.7405Z" fill="#F3CE95"/>
+<path d="M7.17887 51.4994L47.0829 28.8185L46.7731 74.7168L7.17887 51.4994Z" fill="#F3CE95"/>
+<path d="M68.8322 2.16634L91.5319 42.0596L45.6334 41.7715L68.8322 2.16634Z" fill="#F3CE95"/>
+<path d="M27.1842 15.1711L70.4209 30.5768L35.4609 60.3181L27.1842 15.1711Z" fill="#F3CE95"/>
+<ellipse class='sun'
+cx="66.5" cy="55" rx="32.5" ry="30" fill="#FCFF65"/>
+</g>
+<defs>
+<clipPath id="clip0">
+<rect width="469" height="325" fill="white"/>
+</clipPath>
+</defs>
+</svg>
+
+
+</div>
+
+<!--section -->
+<div class='section butterflies'>
+	<h1 class='left'>Butterflies!</h1>
+<svg width="469" height="325" viewBox="0 0 469 325" fill="none" xmlns="http://www.w3.org/2000/svg">
+<rect width="469" height="325" fill="#B991D9"/>
+<path class='wings' d="M148.623 128L122 136V166L141.169 171H155.013H184.831L204 150L184.831 128H148.623Z" fill="#FF922E" stroke="black" stroke-width="2"/>
+<path class='wings'd="M99.2727 128L122 135.814V165.116L105.636 170H93.8182H68.3636L52 149.488L68.3636 128H99.2727Z" fill="#FF922E" stroke="black" stroke-width="2"/>
+<path class='wings'd="M160.903 162H122V185L152.258 206H177.113L189 185L160.903 162Z" fill="#FF922E" stroke="black" stroke-width="2"/>
+<path class='wings' d="M88.3226 163H122V185.477L95.8065 206H74.2903L64 185.477L88.3226 163Z" fill="#FF922E" stroke="black" stroke-width="2"/>
+<ellipse class='insect' cx="122" cy="161.5" rx="5" ry="44.5" fill="#2D0D04"/>
+<path d="M348.316 220.364L324.679 234.996L332.461 263.969L352.27 263.826L365.641 260.235L394.438 252.5L407.504 227.247L383.285 210.972L348.316 220.364Z" fill="#FF922E" stroke="black" stroke-width="2"/>
+<path d="M300.655 233.164L324.631 234.816L332.232 263.115L317.695 272.076L306.281 275.142L281.698 281.744L260.574 266.179L270.804 241.182L300.655 233.164Z" fill="#FF922E" stroke="black" stroke-width="2"/>
+<path d="M368.995 250.015L331.423 260.106L337.389 282.319L372.059 294.751L396.063 288.304L402.096 264.94L368.995 250.015Z" fill="#FF922E" stroke="black" stroke-width="2"/>
+<path d="M299.158 269.807L331.683 261.072L337.513 282.78L317.539 309.394L296.759 314.975L281.498 297.824L299.158 269.807Z" fill="#FF922E" stroke="black" stroke-width="2"/>
+<ellipse class='insect' cx="331.294" cy="259.623" rx="5" ry="44.5" transform="rotate(-15.0335 331.294 259.623)" fill="#2D0D04"/>
+<path d="M323.3 40.1745L295.524 41.3089L288.07 70.3682L305.396 79.974L318.806 83.4137L347.689 90.8222L371.474 75.2433L358.372 49.1705L323.3 40.1745Z" fill="#FF922E" stroke="black" stroke-width="2"/>
+<path d="M275.497 27.913L295.57 41.1287L288.29 69.5121L271.226 70.1771L259.778 67.2408L235.122 60.9164L224.368 36.9823L245.557 20.2334L275.497 27.913Z" fill="#FF922E" stroke="black" stroke-width="2"/>
+<path d="M326.747 76.1594L289.064 66.4936L283.349 88.7724L307.441 116.632L331.517 122.807L348.248 105.419L326.747 76.1594Z" fill="#FF922E" stroke="black" stroke-width="2"/>
+<path d="M256.194 59.0948L288.815 67.4622L283.231 89.2347L252.76 102.606L231.918 97.2601L227.05 74.8242L256.194 59.0948Z" fill="#FF922E" stroke="black" stroke-width="2"/>
+<ellipse class='insect' cx="289.188" cy="66.0092" rx="5" ry="44.5" transform="rotate(14.3862 289.188 66.0092)" fill="#2D0D04"/>
+</svg>
+</div>
+
+
+<!-- section -->
+<div class='section sunset'>
+	<h1 class='right'>Sunset!</h1>
+	<svg width="469" height="325" viewBox="0 0 469 325" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g clip-path="url(#clip0)">
+<rect class='sunsetting' width="469" height="325" fill="url(#paint0_linear)"/>
+<ellipse class='thesun'cx="240" cy="198.5" rx="78" ry="68.5" fill="url(#paint1_linear)"/>
+<path class='water' d="M35.8406 199L0 218.765V325H469V205.176L417.799 212.588L389.127 199L354.31 205.176L326.662 218.765L291.845 212.588L271.365 199L226.308 205.176L180.227 212.588L126.978 199L83.9694 212.588L35.8406 199Z" fill="url(#paint2_linear)" stroke="#001AFF"/>
+</g>
+<defs>
+<linearGradient id="paint0_linear" x1="234.5" y1="0" x2="235" y2="325" gradientUnits="userSpaceOnUse">
+<stop offset="0.0833333" stop-color="#D74EED"/>
+<stop offset="0.720143" stop-color="#FDA400" stop-opacity="0.0306514"/>
+<stop offset="0.821638" stop-color="#8A34DF" stop-opacity="0.0344828"/>
+<stop offset="0.947917" stop-color="#E3A62F" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint1_linear" x1="240" y1="130" x2="240" y2="267" gradientUnits="userSpaceOnUse">
+<stop offset="0.255208" stop-color="#E88614"/>
+<stop offset="1" stop-color="#E8DF14" stop-opacity="0"/>
+</linearGradient>
+<linearGradient id="paint2_linear" x1="234.5" y1="199" x2="234.5" y2="325" gradientUnits="userSpaceOnUse">
+<stop offset="0.150794" stop-color="#5D67C7"/>
+<stop offset="0.9997" stop-color="#FFA800"/>
+<stop offset="0.9998" stop-color="#B6B029" stop-opacity="0"/>
+</linearGradient>
+<clipPath id="clip0">
+<rect width="469" height="325" fill="white"/>
+</clipPath>
+</defs>
+</svg>
+</div>
+
+</body>
+</html>
