--- a/svgstype/index.html
+++ b/svgstype/index.html
@@ -129,7 +129,7 @@
 <div class='butterflies'>
 
 	<style type="text/css">
-	.butterflies svg:hover path {fill: #EDBFC6;}
+	.butterflies svg:hover path {fill: #C02178;}
 	</style>
 
 	<h1 id="up">Butterflies & Nature</h1>
